refactoring: 리뷰 반영 #discussion_r910758847
https://github.com/next-step/jwp-was/pull/218#discussion_r910758847